VG features(pagination , custom Q , Exception handling)